# VoiceNote

./: .gitignore  CMakeLists.txt  README.md  allfiles.txt  dox.config  main.cpp  run.sh
AI_Summarizer/: summarized_transcription1.txt  transcription1.txt
AI_Summarizer/llama.cpp/src/: CMakeLists.txt
AI_Summarizer/src/llm/: AISummarizer.cpp  AISummarizer.h  main.cpp
AI_Summarizer/src/models/: Llama-3.2-1B-Instruct-Q4_K_S.ggufZone.Identifier
SpeechToText/: CMakeLists.txt  speechtotext.cpp  speechtotext.h  speechtotext.ui
docs/html/: annotated.html  annotated_dup.js  class_individual_recording_page-members.html  class_individual_recording_page.html  class_individual_recording_page.js  class_manage_recording_page-members.html  class_manage_recording_page.html  class_manage_recording_page.js  class_speech_to_text-members.html  class_speech_to_text.html  class_speech_to_text.js  classeditor-members.html  classeditor.html  classeditor.js  classes.html  classstorage-members.html  classstorage.html  classstorage.js  dir_3bdc3792a827158024169c7bdee4629e.html  dir_3bdc3792a827158024169c7bdee4629e.js  dir_4e8317a8f2e8b3210281436c8584f48f.html  dir_4e8317a8f2e8b3210281436c8584f48f.js  dir_4fb8c60217d1a757a1d6221c54858276.html  dir_4fb8c60217d1a757a1d6221c54858276.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_b21c3eba0407eb63950773991b5320fc.html  dir_b21c3eba0407eb63950773991b5320fc.js  dir_c1fb79308156b1d76572f5b110b4fce5.html  dir_c1fb79308156b1d76572f5b110b4fce5.js  doxygen_crawl.html  editor_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  individualrecordingpage_8h_source.html  (+7 more)
docs/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
docs/latex/: annotated.tex  class_individual_recording_page.eps  class_individual_recording_page.tex  class_manage_recording_page.eps  class_manage_recording_page.tex  class_speech_to_text.eps  class_speech_to_text.tex  classeditor.tex  classstorage.tex  editor_8h_source.tex  files.tex  hierarchy.tex  individualrecordingpage_8h_source.tex  managerecordingpage_8h_source.tex  md__r_e_a_d_m_e.tex  refman.tex  speechtotext_8h_source.tex  storage_8h_source.tex
editor_class/: editor.cpp  editor.h
individual_recording_page/: CMakeLists.txt  individualrecordingpage.cpp  individualrecordingpage.h  individualrecordingpage.ui
manage_recording_page/: CMakeLists.txt  managerecordingpage.cpp  managerecordingpage.h  managerecordingpage.ui
storage-notes/: .gitkeep  3307Note.txt
storage_class/: main.cpp  storage.cpp  storage.h
tests/: editor_test.cpp  storage_test.cpp
